--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=crypto_app
 
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:file:./data/demodb
 spring.datasource.username=sa
 spring.datasource.password=
