--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=crypto_app
+spring.config.import=optional:file:.env[.properties]
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:file:./data/demodb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
