--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -121,6 +120,9 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <finalName>crypto_app</finalName>
+
     </build>
 
 </project>
